# park-smart-harness

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: check_milvus_fields.py  demo_server.py
src/agent_context/: __init__.py  assembler.py  compactor.py  history.py  knowledge.py  memory.py  plan_view.py  principal.py  system_prompt.py  tokens.py
tests/: conftest.py  test_agent_context_assembler.py  test_agent_context_compaction.py  test_agent_context_history.py  test_agent_context_knowledge.py  test_agent_context_memory.py  test_agent_context_plan_view.py  test_agent_context_principal.py  test_agent_context_system_prompt.py  test_agent_loop_audited_bc.py  test_agent_loop_audited_store.py  test_agent_loop_audited_store_live.py  test_agent_loop_budget.py  test_agent_loop_codec.py  test_agent_loop_compaction.py  test_agent_loop_completion.py  test_agent_loop_concurrency.py  test_agent_loop_config.py  test_agent_loop_context.py  test_agent_loop_control.py  test_agent_loop_conversation.py  test_agent_loop_dispatch.py  test_agent_loop_e2e_smoke.py  test_agent_loop_gate.py  test_agent_loop_governance_e2e.py  test_agent_loop_integration.py  test_agent_loop_interrupt.py  test_agent_loop_llm.py  test_agent_loop_loop.py  test_agent_loop_persist_error.py  test_agent_loop_pg_store.py  test_agent_loop_pg_store_offline.py  test_agent_loop_plan.py  test_agent_loop_providers.py  test_agent_loop_redis_store.py  test_agent_loop_redis_store_offline.py  test_agent_loop_repair.py  test_agent_loop_resume.py  test_agent_loop_runcontrol.py  test_agent_loop_settings.py  (+27 more)
(+63 files in other folders)
